// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Hello /> renders data 1`] = `
<div>
  <Unknown />
  <h1
    className="css-1gao8uk"
  >
    Hello World!
  </h1>
  <styled(Component)>
    <Trans
      parent="div"
    >
      This is some text
    </Trans>
  </styled(Component)>
  <h2 />
</div>
`;

exports[`<Hello /> renders loading 1`] = `
<div>
  <Unknown />
  <div>
    Loading...
  </div>
  <styled(Component)>
    <Trans
      parent="div"
    >
      This is some text
    </Trans>
  </styled(Component)>
  <h2 />
</div>
`;
